# KittiViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: camera.h  car.h  imguiNodeHelper.h  kittiTextParser.h  platform_gl.h  platform_impl.h  pointCloud.h  simpleGeometryCollection.h  tangramMap.h  texture.h  tracklets.h  videoPlayer.h
resources/shaders/: pointcloud.frag.glsl  pointcloud.vert.glsl  texturedQuad.frag.glsl  texturedQuad.vert.glsl  tracklet.frag.glsl  tracklet.vert.glsl  tracklet3d.vert.glsl  vertexColor.frag.glsl  vertexColor.vert.glsl
src/: car.cpp  main.cpp  platform_gl.cpp  platform_impl.cpp  pointCloud.cpp  shader.cpp  simpleGeometryCollection.cpp  tangramMap.cpp  tracklets.cpp  videoPlayer.cpp
